--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-dinky
+
+17:22:13.454  	Cloning github.com/bitokenja3/GMRIGHT2-coll (Branch: master, Commit: 1cbd1f8)
+17:22:14.426  	Cloning completed: 971.081ms
+17:22:14.472  	Analyzing source code...
+17:22:19.213  	Uploading build outputs...
+17:22:19.214  	Deploying build outputs...
+17:22:21.677  	Done with "."
